added default account to get transfers + using username to make transfers + updated postman with instructions in README  + updated openAPI
